<resources>
    <string name="study_app_name">AndroidStudy</string>
    <string name="study_welfare">福利</string>
    <string name="study_vedio">视频</string>
    <string name="study_about_us">关于我们</string>
    <string name="study_log_out">退出登录</string>
    <string name="study_setting">设置</string>
    <string name="study_home">首页</string>
    <string name="study_knowledge">知识体系</string>
    <string name="study_nav">导航</string>
    <string name="study_profile">我</string>

    <string name="study_drawer_open">Open drawer</string>
    <string name="study_drawer_close">Close drawer</string>

    <string name="study_home_share">home_share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
