<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/other">
        <item
            android:id="@+id/nav_item_welfare"
            android:icon="@drawable/icon_meinv"
            android:title="@string/study_welfare" />

        <item
            android:id="@+id/nav_item_video"
            android:icon="@drawable/icon_vidio"
            android:title="@string/study_vedio" />

        <item
            android:id="@+id/nav_item_about_us"
            android:icon="@drawable/icon_about_us"
            android:title="@string/study_about_us" />

        <item
            android:id="@+id/nav_item_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/study_log_out" />
    </group>
    <group android:id="@+id/two">
        <item
            android:id="@+id/nav_item_setting"
            android:icon="@drawable/study_ic_settings_black_24dp"
            android:title="@string/study_setting" />

    </group>
</menu>