<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tab_home"
        android:enabled="true"
        android:icon="@drawable/study_bottom_nav_item_home"
        android:title="@string/study_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_knowledge"
        android:enabled="true"
        android:icon="@drawable/study_bottom_nav_item_knowledge"
        android:title="@string/study_knowledge"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_nav"
        android:enabled="true"
        android:icon="@drawable/study_bottom_nav_item_nav"
        android:title="@string/study_nav"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_self"
        android:enabled="true"
        android:icon="@drawable/study_bottom_nav_item_profile"
        android:title="@string/study_profile"
        app:showAsAction="ifRoom" />
</menu>